unpackaged/main/default/objects/litify_time__lit_Time_Global_Settings__c/litify_time__lit_Time_Global_Settings__c.object-meta.xml
<CustomObject>
    <description>Used to configure Litify Time Tracking. PLEASE ONLY CONFIGURE THROUGH TIME TRACKING ADMIN SETTINGS.</description>
    <label>Time Global Settings</label>
    <nameField>
        <label>Time Global Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Global Settings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>