unpackaged/main/default/objects/litify_time__lit_Time_Global_Settings__c/fields/litify_time__lit_Access_Granting__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Access_Granting__c</fullName>
    <description>Can users log time on behalf of others? 
All: Yes, but they must be granted access by that user or a time tracking admin. 
Admins Only: Yes, but they must be granted access by a time tracking admin. 
None: No, only time tracking admins can log time for others.</description>
    <label>Access Granting</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Admins Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>