unpackaged/main/default/objects/litify_time__lit_Time_Global_Settings__c/fields/litify_time__lit_Auto_Assign_Rate__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Auto_Assign_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Assign Rate</label>
    <type>Checkbox</type>
</CustomField>