unpackaged/main/default/objects/litify_time__lit_Time_Global_Settings__c/fields/litify_time__lit_Billable_By_Default__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Billable_By_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billable By Default (DEPRECATED)</label>
    <type>Checkbox</type>
</CustomField>