unpackaged/main/default/objects/litify_time__lit_Time_Global_Settings__c/fields/litify_time__lit_Billing_Enabled__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Billing_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Enabled</label>
    <type>Checkbox</type>
</CustomField>