unpackaged/main/default/objects/litify_time__lit_Time_Global_Settings__c/fields/litify_time__lit_Disable_Sharing_Calculations__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Disable_Sharing_Calculations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Sharing Calculations</label>
    <type>Checkbox</type>
</CustomField>