unpackaged/main/default/objects/litify_time__lit_Time_Global_Settings__c/fields/litify_time__lit_Duration_Format__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Duration_Format__c</fullName>
    <label>Duration Format</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>hh:mm:ss</fullName>
                <default>true</default>
                <label>hh:mm:ss</label>
            </value>
            <value>
                <fullName>hh:mm</fullName>
            </value>
            <value>
                <fullName>Hour Decimal</fullName>
            </value>
            <value>
                <fullName>Hours h Minutes min</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>