unpackaged/main/default/objects/litify_time__lit_Time_Global_Settings__c/fields/litify_time__lit_Rounding_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Rounding_Type__c</fullName>
    <label>Rounding Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>litify_time__lit_Rounding_Type</valueSetName>
    </valueSet>
</CustomField>