unpackaged/main/default/objects/litify_time__lit_Time_Global_Settings__c/fields/litify_time__lit_Time_Entries_Sharing_Recalculation__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Time_Entries_Sharing_Recalculation__c</fullName>
    <label>Time Entries Sharing Recalculation JobID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>